--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "cove-api-core",
+  "name": "my-app",
   "version": "1.0.0",
-  "description": "The COVE api",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "dev": "nodemon src/index.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Rfvooor/cove-api-core.git"
-  },
-  "author": "Rfvooor",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/Rfvooor/cove-api-core/issues"
-  },
-  "homepage": "https://github.com/Rfvooor/cove-api-core#readme",
   "dependencies": {
-    "@solana/web3.js": "^1.98.0",
-    "clickhouse": "^2.6.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "sequelize": "^6.37.5",
-    "typescript": "^5.7.2"
+    "@solana/spl-token": "^0.2.0",
+    "@solana/wallet-adapter-react": "^0.15.5",
+    "@types/express": "^4.17.13",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "sequelize": "^6.21.0",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0"
+    "nodemon": "^2.0.16"
   }
 }
