--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^7.5.0",
     "sequelize": "^6.21.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
