--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "start:prod": "node dist/index.js",
     "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
+    "@clickhouse/client": "^1.10.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-react": "^0.15.5",
     "@types/express": "^4.17.13",
     "axios": "^0.27.2",
+    "clickhouse": "^2.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^7.5.0",
+    "mathjs": "^14.0.1",
+    "mysql2": "^3.12.0",
     "sequelize": "^6.21.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "nodemon": "^2.0.16"
   }
 }
